--- a/src/peakrdl_python/templates/example.py.jinja
+++ b/src/peakrdl_python/templates/example.py.jinja
@@ -18,8 +18,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 {% include "header.py.jinja" with context %}
 
 {% from 'template_ultilities.py.jinja' import peakrdl_python_lib with context %}
+{# the following defining the number relative steps up to the lib and sim_lib packages from the current file #}
+{% set lib_depth = 1 %}
 
-from {{ peakrdl_python_lib() }} import {% if asyncoutput %}Async{% else %}Normal{% endif %}CallbackSet{% if legacy_block_access %}Legacy{% endif %}
+from {{ peakrdl_python_lib(depth=lib_depth) }} import {% if asyncoutput %}Async{% else %}Normal{% endif %}CallbackSet{% if legacy_block_access %}Legacy{% endif %}
 
 from .reg_model.{{top_node.inst_name}} import {{top_node.inst_name}}_cls
 from .sim.{{top_node.inst_name}} import {{top_node.inst_name}}_simulator_cls
