--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -25,6 +25,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 {% from 'addrmap_system_rdl_name_mapping.py.jinja' import systemrdl_python_child_name_map with context %}
 {% from 'child_definitions.py.jinja' import node_children_iterator with context %}
 {% from 'template_ultilities.py.jinja' import peakrdl_python_lib with context %}
+{# the following defining the number relative steps up to the lib and sim_lib packages from the current file #}
+{% set lib_depth = 1 %}
 
 from typing import Iterator
 from typing import Optional
@@ -38,49 +40,49 @@ import warnings
 {% if legacy_block_access %}from array import array as Array{% endif %}
 
 
-from {{ peakrdl_python_lib() }} import Node, NodeArray, Base
-from {{ peakrdl_python_lib() }} import UDPStruct
+from {{ peakrdl_python_lib(depth=lib_depth) }} import Node, NodeArray, Base
+from {{ peakrdl_python_lib(depth=lib_depth) }} import UDPStruct
 
-from {{ peakrdl_python_lib() }}  import AddressMapArray, RegFileArray
+from {{ peakrdl_python_lib(depth=lib_depth) }}  import AddressMapArray, RegFileArray
 {% if asyncoutput -%}
-from {{ peakrdl_python_lib() }} import AsyncMemory, AsyncMemoryArray
-from {{ peakrdl_python_lib() }} import AsyncAddressMap
-from {{ peakrdl_python_lib() }} import AsyncRegFile
-from {{ peakrdl_python_lib() }}  import AsyncAddressMapArray
-from {{ peakrdl_python_lib() }}  import AsyncRegFileArray
-from {{ peakrdl_python_lib() }} import MemoryAsyncReadOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryAsyncWriteOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryAsyncReadWrite{% if legacy_block_access %}Legacy{% endif %}
-from {{ peakrdl_python_lib() }} import MemoryAsyncReadOnlyArray, MemoryAsyncWriteOnlyArray, MemoryAsyncReadWriteArray
-from {{ peakrdl_python_lib() }} import AsyncReg, AsyncRegArray
-from {{ peakrdl_python_lib() }} import RegAsyncReadOnly, RegAsyncWriteOnly, RegAsyncReadWrite
-from {{ peakrdl_python_lib() }} import RegAsyncReadOnlyArray, RegAsyncWriteOnlyArray, RegAsyncReadWriteArray
-from {{ peakrdl_python_lib() }} import FieldAsyncReadOnly, FieldAsyncWriteOnly, FieldAsyncReadWrite, Field
-{% if uses_enum %}from {{ peakrdl_python_lib() }} import FieldEnumAsyncReadOnly, FieldEnumAsyncWriteOnly, FieldEnumAsyncReadWrite{% endif %}
-from {{ peakrdl_python_lib() }} import ReadableAsyncRegister, WritableAsyncRegister
-from {{ peakrdl_python_lib() }} import ReadableAsyncMemory{% if legacy_block_access %}Legacy{% endif %}, WritableAsyncMemory{% if legacy_block_access %}Legacy{% endif %}
-from {{ peakrdl_python_lib() }} import ReadableAsyncRegisterArray, WriteableAsyncRegisterArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import AsyncMemory, AsyncMemoryArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import AsyncAddressMap
+from {{ peakrdl_python_lib(depth=lib_depth) }} import AsyncRegFile
+from {{ peakrdl_python_lib(depth=lib_depth) }}  import AsyncAddressMapArray
+from {{ peakrdl_python_lib(depth=lib_depth) }}  import AsyncRegFileArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import MemoryAsyncReadOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryAsyncWriteOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryAsyncReadWrite{% if legacy_block_access %}Legacy{% endif %}
+from {{ peakrdl_python_lib(depth=lib_depth) }} import MemoryAsyncReadOnlyArray, MemoryAsyncWriteOnlyArray, MemoryAsyncReadWriteArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import AsyncReg, AsyncRegArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import RegAsyncReadOnly, RegAsyncWriteOnly, RegAsyncReadWrite
+from {{ peakrdl_python_lib(depth=lib_depth) }} import RegAsyncReadOnlyArray, RegAsyncWriteOnlyArray, RegAsyncReadWriteArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import FieldAsyncReadOnly, FieldAsyncWriteOnly, FieldAsyncReadWrite, Field
+{% if uses_enum %}from {{ peakrdl_python_lib(depth=lib_depth) }} import FieldEnumAsyncReadOnly, FieldEnumAsyncWriteOnly, FieldEnumAsyncReadWrite{% endif %}
+from {{ peakrdl_python_lib(depth=lib_depth) }} import ReadableAsyncRegister, WritableAsyncRegister
+from {{ peakrdl_python_lib(depth=lib_depth) }} import ReadableAsyncMemory{% if legacy_block_access %}Legacy{% endif %}, WritableAsyncMemory{% if legacy_block_access %}Legacy{% endif %}
+from {{ peakrdl_python_lib(depth=lib_depth) }} import ReadableAsyncRegisterArray, WriteableAsyncRegisterArray
 {%- else -%}
-from {{ peakrdl_python_lib() }} import Memory, MemoryArray
-from {{ peakrdl_python_lib() }} import AddressMap
-from {{ peakrdl_python_lib() }} import RegFile
-from {{ peakrdl_python_lib() }}  import AddressMapArray
-from {{ peakrdl_python_lib() }}  import RegFileArray
-from {{ peakrdl_python_lib() }} import MemoryReadOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryWriteOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryReadWrite{% if legacy_block_access %}Legacy{% endif %}
-from {{ peakrdl_python_lib() }} import MemoryReadOnlyArray, MemoryWriteOnlyArray, MemoryReadWriteArray
-from {{ peakrdl_python_lib() }} import Reg, RegArray
-from {{ peakrdl_python_lib() }} import RegReadOnly, RegWriteOnly, RegReadWrite
-from {{ peakrdl_python_lib() }} import RegReadOnlyArray, RegWriteOnlyArray, RegReadWriteArray
-from {{ peakrdl_python_lib() }} import FieldReadOnly, FieldWriteOnly, FieldReadWrite, Field
-{% if uses_enum %}from {{ peakrdl_python_lib() }} import FieldEnumReadOnly, FieldEnumWriteOnly, FieldEnumReadWrite{% endif %}
-from {{ peakrdl_python_lib() }} import ReadableRegister, WritableRegister
-from {{ peakrdl_python_lib() }} import ReadableMemory{% if legacy_block_access %}Legacy{% endif %}, WritableMemory{% if legacy_block_access %}Legacy{% endif %}
-from {{ peakrdl_python_lib() }} import ReadableRegisterArray, WriteableRegisterArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import Memory, MemoryArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import AddressMap
+from {{ peakrdl_python_lib(depth=lib_depth) }} import RegFile
+from {{ peakrdl_python_lib(depth=lib_depth) }}  import AddressMapArray
+from {{ peakrdl_python_lib(depth=lib_depth) }}  import RegFileArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import MemoryReadOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryWriteOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryReadWrite{% if legacy_block_access %}Legacy{% endif %}
+from {{ peakrdl_python_lib(depth=lib_depth) }} import MemoryReadOnlyArray, MemoryWriteOnlyArray, MemoryReadWriteArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import Reg, RegArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import RegReadOnly, RegWriteOnly, RegReadWrite
+from {{ peakrdl_python_lib(depth=lib_depth) }} import RegReadOnlyArray, RegWriteOnlyArray, RegReadWriteArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import FieldReadOnly, FieldWriteOnly, FieldReadWrite, Field
+{% if uses_enum %}from {{ peakrdl_python_lib(depth=lib_depth) }} import FieldEnumReadOnly, FieldEnumWriteOnly, FieldEnumReadWrite{% endif %}
+from {{ peakrdl_python_lib(depth=lib_depth) }} import ReadableRegister, WritableRegister
+from {{ peakrdl_python_lib(depth=lib_depth) }} import ReadableMemory{% if legacy_block_access %}Legacy{% endif %}, WritableMemory{% if legacy_block_access %}Legacy{% endif %}
+from {{ peakrdl_python_lib(depth=lib_depth) }} import ReadableRegisterArray, WriteableRegisterArray
 {%- endif %}
 
 
 {% if asyncoutput %}
-from {{ peakrdl_python_lib() }} import AsyncCallbackSet, AsyncCallbackSetLegacy
+from {{ peakrdl_python_lib(depth=lib_depth) }} import AsyncCallbackSet, AsyncCallbackSetLegacy
 {% else %}
-from {{ peakrdl_python_lib() }} import NormalCallbackSet, NormalCallbackSetLegacy
+from {{ peakrdl_python_lib(depth=lib_depth) }} import NormalCallbackSet, NormalCallbackSetLegacy
 {% endif %}
 
 {% for property_enum in unique_property_enums %}
