--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -19,6 +19,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 {% include "header_tb.py.jinja" with context %}
 
 {% from 'template_ultilities.py.jinja' import peakrdl_python_lib with context %}
+{# the following defining the number relative steps up to the lib and sim_lib packages from the current file #}
+{% set lib_depth = 1 %}
 
 from typing import Union,Iterable
 from array import array as Array
@@ -38,38 +40,38 @@ import math
 from enum import IntEnum
 {% endif %}
 
-from {{ peakrdl_python_lib() }} import RegisterWriteVerifyError, UnsupportedWidthError
+from {{ peakrdl_python_lib(depth=lib_depth) }} import RegisterWriteVerifyError, UnsupportedWidthError
 
 from ..reg_model import RegModel
 from ..reg_model.{{top_node.inst_name}}_property_enums import *
 
 {% if asyncoutput %}
-from {{ peakrdl_python_lib() }} import FieldAsyncReadOnly, FieldAsyncWriteOnly, FieldAsyncReadWrite
-from {{ peakrdl_python_lib() }} import WritableAsyncRegister, ReadableAsyncRegister
-from {{ peakrdl_python_lib() }} import RegAsyncReadWrite, RegAsyncReadOnly, RegAsyncWriteOnly
-from {{ peakrdl_python_lib() }} import RegAsyncReadWriteArray, RegAsyncReadOnlyArray, RegAsyncWriteOnlyArray
-from {{ peakrdl_python_lib() }} import MemoryAsyncReadOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryAsyncWriteOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryAsyncReadWrite{% if legacy_block_access %}Legacy{% endif %}
-from {{ peakrdl_python_lib() }} import MemoryAsyncReadOnly{% if legacy_block_access %}Legacy{% endif %}Array, MemoryAsyncWriteOnly{% if legacy_block_access %}Legacy{% endif %}Array, MemoryAsyncReadWrite{% if legacy_block_access %}Legacy{% endif %}Array
-from {{ peakrdl_python_lib() }} import AsyncAddressMap, AsyncRegFile
-from {{ peakrdl_python_lib() }} import AsyncAddressMapArray, AsyncRegFileArray
-from {{ peakrdl_python_lib() }} import AsyncMemory
+from {{ peakrdl_python_lib(depth=lib_depth) }} import FieldAsyncReadOnly, FieldAsyncWriteOnly, FieldAsyncReadWrite
+from {{ peakrdl_python_lib(depth=lib_depth) }} import WritableAsyncRegister, ReadableAsyncRegister
+from {{ peakrdl_python_lib(depth=lib_depth) }} import RegAsyncReadWrite, RegAsyncReadOnly, RegAsyncWriteOnly
+from {{ peakrdl_python_lib(depth=lib_depth) }} import RegAsyncReadWriteArray, RegAsyncReadOnlyArray, RegAsyncWriteOnlyArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import MemoryAsyncReadOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryAsyncWriteOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryAsyncReadWrite{% if legacy_block_access %}Legacy{% endif %}
+from {{ peakrdl_python_lib(depth=lib_depth) }} import MemoryAsyncReadOnly{% if legacy_block_access %}Legacy{% endif %}Array, MemoryAsyncWriteOnly{% if legacy_block_access %}Legacy{% endif %}Array, MemoryAsyncReadWrite{% if legacy_block_access %}Legacy{% endif %}Array
+from {{ peakrdl_python_lib(depth=lib_depth) }} import AsyncAddressMap, AsyncRegFile
+from {{ peakrdl_python_lib(depth=lib_depth) }} import AsyncAddressMapArray, AsyncRegFileArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import AsyncMemory
 {% else %}
-from {{ peakrdl_python_lib() }} import FieldReadOnly, FieldWriteOnly, FieldReadWrite
-from {{ peakrdl_python_lib() }} import WritableRegister, ReadableRegister
-from {{ peakrdl_python_lib() }} import RegReadWrite, RegReadOnly, RegWriteOnly
-from {{ peakrdl_python_lib() }} import RegReadWriteArray, RegReadOnlyArray, RegWriteOnlyArray
-from {{ peakrdl_python_lib() }} import MemoryReadOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryWriteOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryReadWrite{% if legacy_block_access %}Legacy{% endif %}
-from {{ peakrdl_python_lib() }} import MemoryReadOnly{% if legacy_block_access %}Legacy{% endif %}Array, MemoryWriteOnly{% if legacy_block_access %}Legacy{% endif %}Array, MemoryReadWrite{% if legacy_block_access %}Legacy{% endif %}Array
-from {{ peakrdl_python_lib() }} import AddressMap, RegFile
-from {{ peakrdl_python_lib() }} import AddressMapArray, RegFileArray
-from {{ peakrdl_python_lib() }} import Memory
+from {{ peakrdl_python_lib(depth=lib_depth) }} import FieldReadOnly, FieldWriteOnly, FieldReadWrite
+from {{ peakrdl_python_lib(depth=lib_depth) }} import WritableRegister, ReadableRegister
+from {{ peakrdl_python_lib(depth=lib_depth) }} import RegReadWrite, RegReadOnly, RegWriteOnly
+from {{ peakrdl_python_lib(depth=lib_depth) }} import RegReadWriteArray, RegReadOnlyArray, RegWriteOnlyArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import MemoryReadOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryWriteOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryReadWrite{% if legacy_block_access %}Legacy{% endif %}
+from {{ peakrdl_python_lib(depth=lib_depth) }} import MemoryReadOnly{% if legacy_block_access %}Legacy{% endif %}Array, MemoryWriteOnly{% if legacy_block_access %}Legacy{% endif %}Array, MemoryReadWrite{% if legacy_block_access %}Legacy{% endif %}Array
+from {{ peakrdl_python_lib(depth=lib_depth) }} import AddressMap, RegFile
+from {{ peakrdl_python_lib(depth=lib_depth) }} import AddressMapArray, RegFileArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import Memory
 {% endif %}
 
-from {{ peakrdl_python_lib() }} import NodeArray
-from {{ peakrdl_python_lib() }} import Field
-from {{ peakrdl_python_lib() }} import Reg
+from {{ peakrdl_python_lib(depth=lib_depth) }} import NodeArray
+from {{ peakrdl_python_lib(depth=lib_depth) }} import Field
+from {{ peakrdl_python_lib(depth=lib_depth) }} import Reg
 {% if not legacy_enum_type %}
-from {{ peakrdl_python_lib() }} import SystemRDLEnum, SystemRDLEnumEntry
+from {{ peakrdl_python_lib(depth=lib_depth) }} import SystemRDLEnum, SystemRDLEnumEntry
 {% endif %}
 
 from ._{{top_node.inst_name}}_test_base import {{top_node.inst_name}}_TestCase, {{top_node.inst_name}}_TestCase_BlockAccess, {{top_node.inst_name}}_TestCase_AltBlockAccess
