Fix for the bug with enumerated UDP not having the enum type pulled through to memory files

--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -55,6 +55,10 @@ from {{ peakrdl_python_lib(depth=lib_depth) }} import MemoryReadOnly{% if legacy
 from {{ peakrdl_python_lib(depth=lib_depth) }} import Reg, RegArray
 {%- endif %}
 
+{% for property_enum in unique_property_enums %}
+from ..{{top_node.inst_name}}_property_enums import {{property_enum.type_name}}_property_enumcls
+{% endfor %}
+
 {% for register_cls in dependent_registers %}
 from .._registers import {{register_cls}}
 {%- endfor %}
