--- a/src/peakrdl_python/templates/template_ultilities.py.jinja
+++ b/src/peakrdl_python/templates/template_ultilities.py.jinja
@@ -22,3 +22,11 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 {%- macro peakrdl_python_sim_lib(depth) -%}
 {% if skip_lib_copy %}peakrdl_python.{% else %}.{{ '.' * depth }}{% endif %}sim_lib
 {%- endmacro -%}
+
+{%- macro peakrld_version_check(depth) %}
+from {% if skip_lib_copy %}peakrdl_python.{% else %}.{{ '.' * depth }}{% endif %}__about__ import __version__
+if __version__ != '{{version}}':
+    raise RuntimeError('Library built with peakrdl-python version {{version}} however '
+                        f'version {__version__} is installed')
+
+{%- endmacro -%}
