Add missing endif

--- a/src/peakrdl_python/templates/template_ultilities.py.jinja
+++ b/src/peakrdl_python/templates/template_ultilities.py.jinja
@@ -29,5 +29,5 @@ from peakrdl_python.__about__ import __version__
 if __version__ != '{{version}}':
     raise RuntimeError('Library built with peakrdl-python version {{version}} however '
                         f'version {__version__} is installed')
-
+{% endif %}
 {%- endmacro -%}
