--- a/src/peakrdl_python/templates/field_enums.py.jinja
+++ b/src/peakrdl_python/templates/field_enums.py.jinja
@@ -34,9 +34,9 @@ from {{ peakrdl_python_lib(depth=lib_depth) }} import SystemRDLEnum, SystemRDLEn
 # root level enum definitions
 {%- for enum_needed in unique_enums %}
 @unique
-class {{get_fully_qualified_enum_type(enum_needed)}}_enumcls({% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}):
+class {{enum_needed.python_class_name}}({% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}):
 
-    {% for value_of_enum_needed in enum_needed -%}
+    {% for value_of_enum_needed in enum_needed.instance -%}
     {{ value_of_enum_needed.name.upper() }} = {% if legacy_enum_type %}{{ value_of_enum_needed.value }}{% else %}SystemRDLEnumEntry(int_value={{value_of_enum_needed.value}}, name={%- if value_of_enum_needed.rdl_name is not none and not skip_systemrdl_name_and_desc_properties -%}'{{value_of_enum_needed.rdl_name}}'{% else %}None{% endif %}, desc={%- if value_of_enum_needed.rdl_desc is not none and not skip_systemrdl_name_and_desc_properties -%}'{{value_of_enum_needed.rdl_desc}}'{% else %}None{% endif %}){% endif %}  {%- if value_of_enum_needed.rdl_desc is not none %}  # {{ value_of_enum_needed.rdl_desc }} {%- endif %}
     {% endfor %}
 {% endfor -%}
